cluster/apps/ai/toolhive/config/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-gateway
spec:
  # noinspection KubernetesUnknownValues
  hostnames: [ 'mcp.${DOMAIN_NAME}' ]
  parentRefs:
    - name: envoy
      namespace: envoy-system

  rules:
    - backendRefs:
        - name: vmcp-mcp-gateway
          port: 4483
